--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -40,7 +40,7 @@
                         <a data-th-href="@{/encheres}"><i class="fa-solid fa-gavel"></i><span class="nav_titre">Mes enchères</span></a>
                     </li>
                     <li>
-                        <a data-th-href="@{/deconnexion}"><i class="fa-regular fa-circle-xmark"></i><span class="nav_titre">Déconnexion</span></a>
+                        <a data-th-href="@{/logout}"><i class="fa-regular fa-circle-xmark"></i><span class="nav_titre">Déconnexion</span></a>
                     </li>
                 </ul>
             </nav>
