--- a/src/main/resources/templates/fragments/fragment-error.html
+++ b/src/main/resources/templates/fragments/fragment-error.html
@@ -1,14 +1,7 @@
-<!-- fragment-error.html -->
 <div th:fragment="fragmentErreur">
-    <div id="errors-container" style="display: none;">
-        <ul>
-            <!-- Utilisation de th:each pour afficher toutes les erreurs associées aux champs -->
-            <li data-th-each="keyError: ${#fields.errors()}"
-                th:data-field="${keyError.fieldName}"
-                th:data-message="${keyError}">
-                <!-- Message d'erreur -->
-                <span data-th-text="${keyError}"></span>
-            </li>
+    <div th:if="${#fields.hasGlobalErrors()}">
+        <ul class="error-list">
+            <li th:each="err : ${#fields.globalErrors()}" th:text="${err}"></li>
         </ul>
     </div>
 </div>
