formulaire de filtre

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 </div>
 
 <main>
-    <div data-th-replace="fragments/filtre-index-recherche :: filtre-index-recherche"></div>
+<!--    <div data-th-replace="fragments/filtre-index-recherche :: filtre-index-recherche"></div>-->
 
     <!-- Zone des cartes en version Desktop -->
     <section class="cards-section">
