--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,34 +35,56 @@
         <div id="paginationControls" class="pagination-controls_index"></div>
     </section>
 
+
     <!-- Zone du Carousel pour Mobile/Tablette -->
     <section class="carousel-wrapper_index">
         <div id="carouselContainer" class="carousel">
             <div class="carousel-page">
-                <div class="carousel-slide" th:each="article : ${articles}">
-                    <div class="card_index">
+                <!-- Groupe de 2 cartes -->
+                <div class="carousel-slide" th:each="i : ${#numbers.sequence(0, articles.size() - 1, 2)}">
+                    <!-- Première carte -->
+                    <div class="card_index" th:if="${i < articles.size()}">
                         <div class="card-image_index">
-                            <img th:src="@{${article.urlImage}}" alt="Image de l'article">
+                            <img th:src="@{${articles[i].urlImage}}" alt="Image de l'article">
                         </div>
                         <div class="card-content_index">
-                            <h3 class="card-title_index" th:text="${article.nomArticle}">Nom article</h3>
+                            <h3 class="card-title_index" th:text="${articles[i].nomArticle}">Nom article</h3>
                             <p><strong>Prix :</strong>
-                                <span th:text="${article.miseAPrix} + ' crédits'">10 crédits</span></p>
+                                <span th:text="${articles[i].miseAPrix} + ' crédits'">10 crédits</span></p>
                             <p><strong>Fin :</strong>
-                                <span th:text="${#dates.format(article.dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
+                                <span th:text="${#dates.format(articles[i].dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
                             <p><strong>Vendeur :</strong>
-                                <span th:text="${article.utilisateur.pseudo}">Pseudo</span></p>
-                            <a th:href="@{'/encheres/' + ${article.noArticle}}" class="btn_index">Voir</a>
+                                <span th:text="${articles[i].utilisateur.pseudo}">Pseudo</span></p>
+                            <a th:href="@{'/encheres/' + ${articles[i].noArticle}}" class="btn_index">Voir</a>
+                        </div>
+                    </div>
+
+                    <!-- Deuxième carte -->
+                    <div class="card_index" th:if="${i + 1 < articles.size()}">
+                        <div class="card-image_index">
+                            <img th:src="@{${articles[i + 1].urlImage}}" alt="Image de l'article">
+                        </div>
+                        <div class="card-content_index">
+                            <h3 class="card-title_index" th:text="${articles[i + 1].nomArticle}">Nom article</h3>
+                            <p><strong>Prix :</strong>
+                                <span th:text="${articles[i + 1].miseAPrix} + ' crédits'">10 crédits</span></p>
+                            <p><strong>Fin :</strong>
+                                <span th:text="${#dates.format(articles[i + 1].dateFinEncheres, 'dd/MM/yyyy')}"></span></p>
+                            <p><strong>Vendeur :</strong>
+                                <span th:text="${articles[i + 1].utilisateur.pseudo}">Pseudo</span></p>
+                            <a th:href="@{'/encheres/' + ${articles[i + 1].noArticle}}" class="btn_index">Voir</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Pagination des slides dans le carousel -->
+        <!-- Flèches du carousel -->
         <button class="carousel-btn_index prev_index">&lt;</button>
         <button class="carousel-btn_index next_index">&gt;</button>
     </section>
+
+
 
     <script src="/js/carousel_index.js"></script>
     <script src="/js/pagination_index.js"></script>
